syntax = "proto3";
package ink.pmc.framework.options.proto;

import "ink.pmc.framework.options/OptionsUpdateNotify.proto";
import "google/protobuf/empty.proto";

service OptionsRpc {
  rpc NotifyOptionsUpdate(OptionsUpdateNotify) returns (google.protobuf.Empty);
  rpc MonitorOptionsUpdate(google.protobuf.Empty) returns (stream OptionsUpdateNotify);
}